# TA_log-analyzer

./: README.md  makefile  pyproject.toml
examples/: .gitkeep
logs/: .gitkeep
src/: formatter.py  log_parser.py  main.py
src/reports/: base.py  handlers.py
tests/: test_cli.py  test_parser.py  test_report.py
